# AstrAI

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: update-badges.yml
Data/: pretrain.json
assets/docs/: README-zh-CN.md  architecture.md  dataflow.md  inference.md  params.md  preprocessing.md  training.md
astrai/: __init__.py  factory.py  serialization.py
astrai/config/: base.py  model_config.py  preprocess_config.py  train_config.py
astrai/dataset/: dataset.py  storage.py
astrai/extension/: __init__.py  loader.py  ops.py
astrai/inference/: __init__.py  engine.py  sample.py
astrai/parallel/: executor.py  setup.py
astrai/preprocessing/: __init__.py  builder.py  packing.py  pipeline.py  position_id.py  writer.py
astrai/serialization/: dataset.py
astrai/trainer/: __init__.py  metric_util.py  schedule.py  strategy.py  train_callback.py  train_context.py  trainer.py
csrc/: __init__.py  build.py
csrc/kernels/: gqa_common.cuh  gqa_decode_attn.cu  gqa_decode_attn.cuh  gqa_decode_attn_mma.cuh  gqa_mma_utils.cuh  gqa_prefill_attn.cu  gqa_prefill_attn.cuh  gqa_prefill_attn_mma.cuh
csrc/tests/: gqa_decode_test.cu  gqa_prefill_test.cu
scripts/eval/: analyze_weights.py  evaluate_humaneval.py  evaluate_ifd.py  evaluate_ifeval.py  evaluate_mmlu.py  evaluate_rouge.py
scripts/tools/: evaluate_humaneval.py  preprocess.py  train.py
tests/: conftest.py
tests/data/: conftest.py  test_checkpoint.py  test_dataset.py  test_preprocess_builder.py  test_preprocess_config.py  test_preprocess_pipeline.py
(+18 files in other folders)
