[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "astrai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py==3.15.1",
    "numpy==2.4.4",
    "torch==2.11.0",
    "tokenizers==0.21.4",
    "tqdm==4.67.1",
    "safetensors==0.5.3",
    "huggingface-hub==0.34.3",
    "jinja2>=3.0.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "requests",
]
keywords = ["nlp", "datasets", "language-models", "machine-learning"]
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/ViperEkura/AstrAI" }

[project.optional-dependencies]
dev = ["pytest==9.0.2", "ruff"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cu128"

[tool.setuptools.dynamic]
version = { attr = "astrai.__version__" }

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"